welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:-6: error: Missing closing brace `}' assumed here
try {
^posNeg:1: error: expected class or object definition
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {return ((negative&&(a<0)&&(b<0))||((!negative)&&(((a<0)&&(b>0))||((b<0)&&(a>0))))) 
^